🐛 FIX: Icons not aligned

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -38,27 +38,8 @@
     z-index: 100;
 
     .logo {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-
-      text-decoration: none;
-
-      img {
-        width: auto;
-        height: 24px;
-        transition: 0.3s ease all;
-
-        @include breakpoint(lg) {
-          height: 28px;
-        }
-      }
-      &__title {
-        font-weight: 800;
-        margin: 0;
-        padding: 0.4rem;
-        cursor: pointer;
-      }
+      width: 36px;
+      height: 36px;
     }
 
     .nav {
